<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.x.z.Main_Page"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical"
    >

    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:text="@string/acc"
        />
    
    <EditText 
        android:id="@+id/acc"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:hint="@string/acc_hint"
        />
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:text="@string/pass"
        />
    
    <EditText 
        android:id="@+id/pass"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:hint="@string/pass_hint"
    	android:inputType="textPassword"
        />
    
    <Button 
        android:id="@+id/submit"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:hint="@string/submit"
        />
    
    <View 
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    
    
</LinearLayout>